# mac-dev-setup

./: .gitignore  .tool-versions  .yamllint  pyproject.toml
ansible/: ansible.cfg  install-vscode-plugins.sh  main.yaml  requirements.yaml  run.sh  vscode-plugins.txt
ansible/tasks/: install-asdf.yaml  install-poetry.yaml  install-terraform.yaml  setup-aliases.yaml
ansible/vars/: homebrew.yaml  terraform.yaml  vscode-plugins.yaml
